package ThiCK.OnTap.QuanHeKH;

public interface ICusState {
    double getGiamGia();
    String getTrangThai();
    int doiDiem(int diem);
}
