@startuml
'https://plantuml.com/class-diagram
'Ý 2 là sử dụng Singleton để mỗi mối quan hệ là suy nhất

interface ICusState{
    + double getGiamGia()
    + String getTrangThai()
    + int doiDiem(int diem)
}

class QuanHe_ThanThiet implements ICusState{
    - {static} QuanHe_ThanThiet instance
    # QuanHe_ThanThiet()
    + {static} QuanHe_ThanThiet getInstance()
    + double getGiamGia()
    + String getTrangThai()
    + int doiDiem(int diem)
}

class QuanHe_Bac implements ICusState{
    - {static} QuanHe_Bac instance
    # QuanHe_Bac()
    + {static} QuanHe_Bac getInstance()
    + double getGiamGia()
    + String getTrangThai()
    + int doiDiem(int diem)
}

class QuanHe_Vang implements ICusState{
    - {static} QuanHe_Vang instance
    # QuanHe_Vang()
    + {static} QuanHe_Vang getInstance()
    + double getGiamGia()
    + String getTrangThai()
    + int doiDiem(int diem)
}

class MatHang{
    + String ten
    + int soLuong
    + double donGia
    + MatHang(String ten, int soLuong, double donGia)
    + double thanhTien()
}

class KhachHang{
    + String id, ten
    + int diem
    + ICusState state
    + KhachHang(String id, String ten)
    + void muaHang(List<MatHang> ds)
    + String toString()
    + int doiTienThuong()
}

KhachHang --> MatHang: dsmh
KhachHang --> ICusState: state

@enduml